--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -18,7 +18,11 @@ if HAVE_LIBVALA_0_12
 DRIVER_0_12_X_DIR = 0.12.x
 endif
 
-if HAVE_LIBVALA_0_13
+if HAVE_LIBVALA_0_13_0_1
+DRIVER_0_13_X_DIR = 0.13.x
+endif
+
+if HAVE_LIBVALA_0_13_X
 DRIVER_0_13_X_DIR = 0.13.x
 endif
 
