--- a/configure.in
+++ b/configure.in
@@ -62,10 +62,16 @@ AC_SUBST(LIBGDKPIXBUF_LIBS)
 ## Drivers:
 ##
 
-PKG_CHECK_MODULES(LIBVALA_0_13, libvala-0.14 >= 0.13, have_libvala_0_13="yes", have_libvala_0_13="no")
-AM_CONDITIONAL(HAVE_LIBVALA_0_13, test "$have_libvala_0_13" = "yes")
-AC_SUBST(LIBVALA_0_13_CFLAGS)
-AC_SUBST(LIBVALA_0_13_LIBS)
+PKG_CHECK_MODULES(LIBVALA_0_13_X, libvala-0.14 >= 0.13.1, have_libvala_0_13_x="yes", have_libvala_0_13_x="no")
+AM_CONDITIONAL(HAVE_LIBVALA_0_13_X, test "$have_libvala_0_13_x" = "yes")
+AC_SUBST(LIBVALA_0_13_X_CFLAGS)
+AC_SUBST(LIBVALA_0_13_X_LIBS)
+
+
+PKG_CHECK_MODULES(LIBVALA_0_13_X, libvala-0.14 >= 0.13.0 libvala-0.14 <= 0.13.1, have_libvala_0_13_0_1="yes", have_libvala_0_13_0_1="no")
+AM_CONDITIONAL(HAVE_LIBVALA_0_13_0_1, test "$have_libvala_0_13_0_1" = "yes")
+AC_SUBST(LIBVALA_0_13_X_CFLAGS)
+AC_SUBST(LIBVALA_0_13_X_LIBS)
 
 
 PKG_CHECK_MODULES(LIBVALA_0_12, libvala-0.12 >= 0.12, have_libvala_0_12="yes", have_libvala_0_12="no")
