driver/*, libvaladoc: Move ChildSymbolRegistrar to libvaladoc

--- a/src/libvaladoc/Makefile.am
+++ b/src/libvaladoc/Makefile.am
@@ -44,6 +44,7 @@ libvaladoc_la_VALASOURCES = \
 	api/attributeargument.vala \
 	api/attribute.vala \
 	api/array.vala \
+	api/childsymbolregistrar.vala \
 	api/class.vala \
 	api/constant.vala \
 	api/delegate.vala \
