codegen: Assign to temp varable when passing a nullable struct argument
Assign possible (*expr) to a temp variable to ensure copying the struct.

Fixes bug 656693.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -72,6 +72,7 @@ TESTS = \
 	structs/bug651441.vala \
 	structs/bug654646.vala \
 	structs/bug654753.vala \
+	structs/bug656693.vala \
 	delegates/delegates.vala \
 	delegates/bug539166.vala \
 	delegates/bug595610.vala \
