build: Enable maintainer mode by default

--- a/configure.ac
+++ b/configure.ac
@@ -4,7 +4,7 @@ AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_HEADERS(config.h)
 AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE([1.11 dist-bzip2])
-AM_MAINTAINER_MODE
+AM_MAINTAINER_MODE([enable])
 
 PACKAGE_SUFFIX=-0.14
 AC_SUBST(PACKAGE_SUFFIX)
