--- a/vapi/Makefile.am
+++ b/vapi/Makefile.am
@@ -280,7 +280,7 @@ gdk-3.0:
 	$(GENVAPI) --library $(srcdir)/gdk-3.0 --pkg gio-2.0 --metadatadir $(METADATADIR) $(METADATADIR)/Gdk-3.0-custom.vala $(GIRDIR)/Gdk-3.0.gir
 
 gdk-pixbuf-2.0:
-	$(GENVAPI) --library $(srcdir)/gdk-pixbuf-2.0 $(PACKAGESDIR)/gdk-pixbuf-2.0/gdk-pixbuf-2.0.gi
+	$(GENVAPI) --library $(srcdir)/gdk-pixbuf-2.0 --pkg gio-2.0 --metadatadir $(METADATADIR) $(METADATADIR)/GdkPixbuf-2.0-custom.vala $(GIRDIR)/GdkPixbuf-2.0.gir
 
 gdk-x11-2.0:
 	$(GENVAPI) --library $(srcdir)/gdk-x11-2.0 $(PACKAGESDIR)/gdk-x11-2.0/gdk-x11-2.0.gi
