atk: switch to GIR
Fixes bug 654402.

--- a/vapi/Makefile.am
+++ b/vapi/Makefile.am
@@ -256,7 +256,7 @@ GEDIT_GIRDIR=$$($(PKG_CONFIG) gedit --variable=prefix)/share/gedit/gir-1.0
 all-bindings: $(BINDINGS)
 
 atk:
-	$(GENVAPI) --library $(srcdir)/atk $(PACKAGESDIR)/atk/atk.gi
+	$(GENVAPI) --library $(srcdir)/atk --metadatadir $(METADATADIR) $(METADATADIR)/Atk-1.0-custom.vala $(GIRDIR)/Atk-1.0.gir
 
 clutter-1.0:
 	$(GENVAPI) --library $(srcdir)/clutter-1.0 --metadatadir $(METADATADIR) $(METADATADIR)/Clutter-1.0-custom.vala --pkg atk --pkg cairo --pkg pango --pkg cogl-1.0 --pkg json-glib-1.0 $(GIRDIR)/Clutter-1.0.gir
