codegen: Do not treat void* to not leak memory anymore
It wasn't possible to let void* variables take the ownership of
an expression as it's always been freed afterwards.
Simple generics can be used to enforce ownership instead of void*.

Fixes bug 659975.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -30,6 +30,7 @@ TESTS = \
 	basic-types/bug650993.vala \
 	basic-types/bug652380.vala \
 	basic-types/bug655908.vala \
+	basic-types/bug659975.vala \
 	namespaces.vala \
 	methods/lambda.vala \
 	methods/closures.vala \
