Fix regression when calling .resize() or .move() on arrays inside structs
The check for lvalue access has been extended to arrays for simplifying
the conditions.

Fixes bug 660426.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -75,6 +75,7 @@ TESTS = \
 	structs/bug654753.vala \
 	structs/bug656693.vala \
 	structs/bug658048.vala \
+	structs/bug660426.vala \
 	delegates/delegates.vala \
 	delegates/bug539166.vala \
 	delegates/bug595610.vala \
