drivers: Add 0.14.x driver

--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -26,12 +26,17 @@ if HAVE_LIBVALA_0_13_X
 DRIVER_0_13_X_DIR = 0.13.x
 endif
 
+if HAVE_LIBVALA_0_14_X
+DRIVER_0_14_X_DIR = 0.14.x
+endif
+
 SUBDIRS = \
 	$(DRIVER_0_10_X_DIR) \
 	$(DRIVER_0_11_0_DIR) \
 	$(DRIVER_0_11_X_DIR) \
 	$(DRIVER_0_12_X_DIR) \
 	$(DRIVER_0_13_X_DIR) \
+	$(DRIVER_0_14_X_DIR) \
 	$(NULL)
 
 
