--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl configure.in
 AC_PREREQ(2.59)
-AC_INIT(Valadoc, 0.3.1, flo.brosch@gmail.com)
+AC_INIT(Valadoc, 0.3.2, flo.brosch@gmail.com)
 AM_INIT_AUTOMAKE
 AC_CONFIG_SRCDIR([src/valadoc/valadoc.vala])
 AC_CONFIG_HEADER([config.h])
@@ -62,6 +62,13 @@ AC_SUBST(LIBGDKPIXBUF_LIBS)
 ## Drivers:
 ##
 
+
+PKG_CHECK_MODULES(LIBVALA_0_14_X, libvala-0.14 >= 0.14.0, have_libvala_0_14_x="yes", have_libvala_0_14_x="no")
+AM_CONDITIONAL(HAVE_LIBVALA_0_14_X, test "$have_libvala_0_14_x" = "yes")
+AC_SUBST(LIBVALA_0_14_X_CFLAGS)
+AC_SUBST(LIBVALA_0_14_X_LIBS)
+
+
 PKG_CHECK_MODULES(LIBVALA_0_13_X, libvala-0.14 >= 0.13.1, have_libvala_0_13_x="yes", have_libvala_0_13_x="no")
 AM_CONDITIONAL(HAVE_LIBVALA_0_13_X, test "$have_libvala_0_13_x" = "yes")
 AC_SUBST(LIBVALA_0_13_X_CFLAGS)
@@ -112,6 +119,7 @@ AC_CONFIG_FILES([Makefile
 				 src/driver/0.11.x/Makefile
 				 src/driver/0.12.x/Makefile
 				 src/driver/0.13.x/Makefile
+				 src/driver/0.14.x/Makefile
                  src/doclets/Makefile
                  src/doclets/htm/Makefile
                  src/doclets/devhelp/Makefile
