Split avahi-client out from avahi-gobject.
Fixes bug 662175.

--- a/vapi/Makefile.am
+++ b/vapi/Makefile.am
@@ -9,6 +9,7 @@ dist_vapi_DATA = \
 	alsa.vapi \
 	alsa.deps \
 	atk.vapi \
+	avahi-client.vapi \
 	avahi-gobject.deps \
 	avahi-gobject.vapi \
 	bzlib.vapi \
