--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -48,6 +48,7 @@ TESTS = \
 	methods/bug649562.vala \
 	methods/bug653391.vala \
 	methods/bug653908.vala \
+	methods/bug663210.vala \
 	control-flow/break.vala \
 	control-flow/expressions-conditional.vala \
 	control-flow/for.vala \
