--- a/src/driver/0.16.x/Makefile.am
+++ b/src/driver/0.16.x/Makefile.am
@@ -1,7 +1,8 @@
 NULL =
 
-VERSIONED_VAPI_DIR=`pkg-config libvala-0.14 --variable vapidir`
 
+
+VERSIONED_VAPI_DIR=`pkg-config libvala-0.16 --variable vapidir`
 
 
 AM_CFLAGS =  -g \
@@ -9,7 +10,7 @@ AM_CFLAGS =  -g \
 	-I ../../libvaladoc/ \
 	$(GLIB_CFLAGS) \
 	$(LIBGEE_CFLAGS) \
-	$(LIBVALA_0_14_X_CFLAGS) \
+	$(LIBVALA_0_16_X_CFLAGS) \
 	$(NULL)
 
 
@@ -17,7 +18,7 @@ AM_CFLAGS =  -g \
 BUILT_SOURCES = libdriver.vala.stamp
 
 
-driverdir = $(libdir)/valadoc/drivers/0.14.x
+driverdir = $(libdir)/valadoc/drivers/0.16.x
 
 
 libdriver_la_LDFLAGS = -module -avoid-version -no-undefined
@@ -43,14 +44,14 @@ libdriver_la_SOURCES =      \
 
 
 libdriver.vala.stamp: $(libdriver_la_VALASOURCES)
-	$(VALAC) $(VALA_FLAGS) -C --vapidir $(top_srcdir)/src/vapi --vapidir $(VERSIONED_VAPI_DIR) --vapidir $(top_srcdir)/src/libvaladoc --pkg libvala-0.14 --pkg gee-1.0 --pkg valadoc-1.0 --basedir . $^
+	$(VALAC) $(VALA_FLAGS) -C --vapidir $(VERSIONED_VAPI_DIR) --vapidir $(top_srcdir)/src/vapi --vapidir $(top_srcdir)/src/libvaladoc --pkg libvala-0.16 --pkg gee-1.0 --pkg valadoc-1.0 --basedir . $^
 	touch $@
 
 
 libdriver_la_LIBADD = \
 	../../libvaladoc/libvaladoc.la \
 	$(GLIB_LIBS) \
-	$(LIBVALA_0_14_X_LIBS) \
+	$(LIBVALA_0_16_X_LIBS) \
 	$(LIBGEE_LIBS) \
 	$(NULL)
 
