--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -113,6 +113,7 @@ TESTS = \
 	objects/bug646792.vala \
 	objects/bug653138.vala \
 	objects/bug654702.vala \
+	objects/bug664529.vala \
 	errors/errors.vala \
 	errors/bug567181.vala \
 	errors/bug579101.vala \
