gee: Add MapIterator

--- a/gee/Makefile.am
+++ b/gee/Makefile.am
@@ -17,6 +17,7 @@ libgee_la_VALASOURCES = \
 	hashmap.vala \
 	hashset.vala \
 	iterable.vala \
+	mapiterator.vala \
 	iterator.vala \
 	list.vala \
 	map.vala \
