--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -6,15 +6,19 @@ if HAVE_LIBVALA_0_10_X
 DRIVER_0_10_X_DIR = 0.10.x
 endif
 
-if HAVE_LIBVALA_0_11_0
-DRIVER_0_11_0_DIR = 0.11.0
+#if HAVE_LIBVALA_0_11_0
+#DRIVER_0_11_0_DIR = 0.11.0
+#endif
+
+#if HAVE_LIBVALA_0_11_X
+#DRIVER_0_11_X_DIR = 0.11.x
+#endif
+
+if HAVE_LIBVALA_0_12_X
+DRIVER_0_12_X_DIR = 0.12.x
 endif
 
-if HAVE_LIBVALA_0_11_X
-DRIVER_0_11_X_DIR = 0.11.x
-endif
-
-if HAVE_LIBVALA_0_12
+if HAVE_LIBVALA_0_12_0
 DRIVER_0_12_X_DIR = 0.12.x
 endif
 
@@ -36,8 +40,6 @@ endif
 
 SUBDIRS = \
 	$(DRIVER_0_10_X_DIR) \
-	$(DRIVER_0_11_0_DIR) \
-	$(DRIVER_0_11_X_DIR) \
 	$(DRIVER_0_12_X_DIR) \
 	$(DRIVER_0_13_X_DIR) \
 	$(DRIVER_0_14_X_DIR) \
