--- a/configure.in
+++ b/configure.in
@@ -86,29 +86,22 @@ AC_SUBST(LIBVALA_0_13_X_CFLAGS)
 AC_SUBST(LIBVALA_0_13_X_LIBS)
 
 
-PKG_CHECK_MODULES(LIBVALA_0_12, libvala-0.12 >= 0.12, have_libvala_0_12="yes", have_libvala_0_12="no")
-AM_CONDITIONAL(HAVE_LIBVALA_0_12, test "$have_libvala_0_12" = "yes")
-AC_SUBST(LIBVALA_0_12_CFLAGS)
-AC_SUBST(LIBVALA_0_12_LIBS)
+PKG_CHECK_MODULES(LIBVALA_0_12_X, libvala-0.12 >= 0.11.1, have_libvala_0_12_x="yes", have_libvala_0_12_x="no")
+AM_CONDITIONAL(HAVE_LIBVALA_0_12_X, test "$have_libvala_0_12_x" = "yes")
+AC_SUBST(LIBVALA_0_12_X_CFLAGS)
+AC_SUBST(LIBVALA_0_12_X_LIBS)
 
 
-PKG_CHECK_MODULES(LIBVALA_0_11_X, libvala-0.12 > 0.11.1 libvala-0.12 <= 0.12, have_libvala_0_11_x="yes", have_libvala_0_11_x="no")
-AM_CONDITIONAL(HAVE_LIBVALA_0_11_X, test "$have_libvala_0_11_x" = "yes")
-AC_SUBST(LIBVALA_0_11_X_CFLAGS)
-AC_SUBST(LIBVALA_0_11_X_LIBS)
-
-
-PKG_CHECK_MODULES(LIBVALA_0_11_0, libvala-0.12 = 0.11.0, have_libvala_0_11_0="yes", have_libvala_0_11_0="no")
-AM_CONDITIONAL(HAVE_LIBVALA_0_11_0, test "$have_libvala_0_11_0" = "yes")
-AC_SUBST(LIBVALA_0_11_0_CFLAGS)
-AC_SUBST(LIBVALA_0_11_0_LIBS)
+PKG_CHECK_MODULES(LIBVALA_0_12_0, libvala-0.12 = 0.11.0, have_libvala_0_12_0="yes", have_libvala_0_12_0="no")
+AM_CONDITIONAL(HAVE_LIBVALA_0_12_0, test "$have_libvala_0_12_0" = "yes")
+AC_SUBST(LIBVALA_0_12_0_CFLAGS)
+AC_SUBST(LIBVALA_0_12_0_LIBS)
 
 
 PKG_CHECK_MODULES(LIBVALA_0_10_X, vala-0.10 >= 0.10, have_libvala_0_10_x="yes", have_libvala_0_10_x="no")
 AM_CONDITIONAL(HAVE_LIBVALA_0_10_X, test "$have_libvala_0_10_x" = "yes")
 AC_SUBST(LIBVALA_0_10_X_CFLAGS)
 AC_SUBST(LIBVALA_0_10_X_LIBS)
-
 
 
 AC_CONFIG_FILES([Makefile
@@ -120,8 +113,6 @@ AC_CONFIG_FILES([Makefile
                  src/libvaladoc/Makefile
                  src/driver/Makefile
 				 src/driver/0.10.x/Makefile
-				 src/driver/0.11.0/Makefile
-				 src/driver/0.11.x/Makefile
 				 src/driver/0.12.x/Makefile
 				 src/driver/0.13.x/Makefile
 				 src/driver/0.14.x/Makefile
