--- a/src/driver/0.14.x/Makefile.am
+++ b/src/driver/0.14.x/Makefile.am
@@ -2,12 +2,23 @@ NULL =
 
 VERSIONED_VAPI_DIR=`pkg-config libvala-0.14 --variable vapidir`
 
+if HAVE_LIBVALA_0_13_0
+VALA_FLAGS = -D VALA_0_13_0
+endif
+
+if HAVE_LIBVALA_0_13_1
+VALA_FLAGS = -D VALA_0_13_1
+endif
+
+
 AM_CFLAGS =  -g \
 	-DPACKAGE_ICONDIR=\"$(datadir)/valadoc/icons/\" \
 	-I ../../libvaladoc/ \
 	$(GLIB_CFLAGS) \
 	$(LIBGEE_CFLAGS) \
 	$(LIBVALA_0_14_X_CFLAGS) \
+	$(LIBVALA_0_13_0_CFLAGS) \
+	$(LIBVALA_0_13_1_CFLAGS) \
 	$(NULL)
 
 
@@ -41,7 +52,7 @@ libdriver_la_SOURCES =      \
 
 
 libdriver.vala.stamp: $(libdriver_la_VALASOURCES)
-	$(VALAC) $(VALA_FLAGS) -C --vapidir $(top_srcdir)/src/vapi --vapidir $(VERSIONED_VAPI_DIR) --vapidir $(top_srcdir)/src/libvaladoc --pkg libvala-0.14 --pkg gee-1.0 --pkg valadoc-1.0 --basedir . $^
+	$(VALAC) $(VALA_FLAGS) -C --vapidir $(top_srcdir)/src/vapi --vapidir $(VERSIONED_VAPI_DIR) --vapidir $(top_srcdir)/src/libvaladoc --pkg libvala-0.14 --pkg gee-1.0 --pkg valadoc-1.0 --basedir . $(VALA_FLAGS) $^
 	touch $@
 
 
@@ -49,6 +60,8 @@ libdriver_la_LIBADD = \
 	../../libvaladoc/libvaladoc.la \
 	$(GLIB_LIBS) \
 	$(LIBVALA_0_14_X_LIBS) \
+	$(LIBVALA_0_13_0_LIBS) \
+	$(LIBVALA_0_13_1_LIBS) \
 	$(LIBGEE_LIBS) \
 	$(NULL)
 
