--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -6,14 +6,6 @@ if HAVE_LIBVALA_0_10_X
 DRIVER_0_10_X_DIR = 0.10.x
 endif
 
-#if HAVE_LIBVALA_0_11_0
-#DRIVER_0_11_0_DIR = 0.11.0
-#endif
-
-#if HAVE_LIBVALA_0_11_X
-#DRIVER_0_11_X_DIR = 0.11.x
-#endif
-
 if HAVE_LIBVALA_0_12_X
 DRIVER_0_12_X_DIR = 0.12.x
 endif
@@ -22,12 +14,12 @@ if HAVE_LIBVALA_0_12_0
 DRIVER_0_12_X_DIR = 0.12.x
 endif
 
-if HAVE_LIBVALA_0_13_0_1
-DRIVER_0_13_X_DIR = 0.13.x
+if HAVE_LIBVALA_0_13_0
+DRIVER_0_14_X_DIR = 0.14.x
 endif
 
-if HAVE_LIBVALA_0_13_X
-DRIVER_0_13_X_DIR = 0.13.x
+if HAVE_LIBVALA_0_13_1
+DRIVER_0_14_X_DIR = 0.14.x
 endif
 
 if HAVE_LIBVALA_0_14_X
@@ -41,7 +33,6 @@ endif
 SUBDIRS = \
 	$(DRIVER_0_10_X_DIR) \
 	$(DRIVER_0_12_X_DIR) \
-	$(DRIVER_0_13_X_DIR) \
 	$(DRIVER_0_14_X_DIR) \
 	$(DRIVER_0_16_X_DIR) \
 	$(NULL)
