Add initial reading-support for <doc>

--- a/src/driver/0.16.x/Makefile.am
+++ b/src/driver/0.16.x/Makefile.am
@@ -33,6 +33,7 @@ libdriver_la_VALASOURCES = \
 	initializerbuilder.vala \
 	symbolresolver.vala \
 	treebuilder.vala \
+	girwriter.vala \
 	driver.vala \
 	$(NULL)
 
