--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -81,6 +81,7 @@ TESTS = \
 	structs/bug658048.vala \
 	structs/bug660426.vala \
 	structs/bug661945.vala \
+	structs/bug667890.vala \
 	delegates/delegates.vala \
 	delegates/bug539166.vala \
 	delegates/bug595610.vala \
